Update message_storage_operator.md