@@ -6,45 +6,39 @@ summary: Learn how to configure message storage with Milvus Operator.
 ---
 
 # Configure Message Storage with Milvus Operator
-
-Milvus uses RocksMQ, Pulsar or Kafka for managing logs of recent changes, outputting stream logs, and providing log subscriptions. This topic introduces how to configure message storage dependencies when you install Milvus with Milvus Operator. For more details, refer to [Configure Message Storage with Milvus Operator](https://github.com/zilliztech/milvus-operator/blob/main/docs/administration/manage-dependencies/message-storage.md) in the Milvus Operator repository.
+Milvus uses `RocksMQ`, `Pulsar` or `Kafka` for managing logs of recent changes, outputting stream logs, and providing log subscriptions. This topic introduces how to configure message storage dependencies when you install Milvus with Milvus Operator.
 
 This topic assumes that you have deployed Milvus Operator.
 
-<div class="alert note">See <a href="https://milvus.io/docs/v2.2.x/install_cluster-milvusoperator.md">Deploy Milvus Operator</a> for more information. </div>
+> See [Deploy Milvus Operator](../../installation/installation.md) for more information.
 
-You need to specify a configuration file for using Milvus Operator to start a Milvus cluster.
+You need to specify a configuration file for using Milvus Operator to start a Milvus.
 
-```YAML
-kubectl apply -f https://raw.githubusercontent.com/zilliztech/milvus-operator/main/config/samples/milvus_cluster_default.yaml
+```shell
+kubectl apply -f https://raw.githubusercontent.com/zilliztech/milvus-operator/main/config/samples/demo.yaml
 ```
 
-You only need to edit the code template in `milvus_cluster_default.yaml` to configure third-party dependencies. The following sections introduce how to configure object storage, etcd, and Pulsar respectively.
+You only need to edit the code template in `demo.yaml` to configure third-party dependencies. The following sections introduce how to configure etcd.
 
-## Before you begin
-The table below shows whether RocksMQ, NATS, Pulsar, and Kafka are supported in Milvus standalone and cluster mode. 
+# Before you begin
+The table below shows whether RocksMQ, Pulsar, and Kafka are supported in Milvus standalone and cluster mode.
 
-|                 | RocksMQ | NATS   | Pulsar | Kafka |
-|:---------------:|:-------:|:------:|:------:|:-----:|
-| Standalone mode |    ✔️    |    ✔️   |   ✔️    |   ✔️   |
-|   Cluster mode  |    ✖️    |    ✖️   |   ✔️    |   ✔️   |
+|                 | RocksMQ | Pulsar | Kafka |
+|:---------------:|:-------:|:------:|:-----:|
+| Standalone mode |    ✔️    |    ✔️   |   ✔️   |
+|   Cluster mode  |    ✖️    |    ✔️   |   ✔️   |
 
 There are also other limitations for specifying the message storage:
 - Only one message storage for one Milvus instance is supported. However we still have backward compatibility with multiple message storages set for one instance. The priority is as follows:
   - standalone mode:  RocksMQ (default) > Pulsar > Kafka
   - cluster mode: Pulsar (default) > Kafka
-  - Nats introduced in 2.3 do not participate in these priority rules for backward compatibility.
 - The message storage cannot be changed while the Milvus system is running. 
-- Only Kafka 2.x or 3.x verison is supported.
+-  Only Kafka 2.x or 3.x verison is supported.
 
 ## Configure RocksMQ
 RocksMQ is the default message storage in Milvus standalone. 
 
-<div class="alert note">
-
-Currently, you can only configure RocksMQ as the message storage for Milvus standalone with Milvus Operator. 
-
-</div>
+> Currently, you can only configure RocksMQ as the message storage for Milvus in standalone mode.
 
 #### Example 
 
@@ -56,85 +50,17 @@ kind: Milvus
 metadata:
   name: milvus
 spec:
-  dependencies: {}
-  components: {}
-  config: {}
+  # Omit other fields ...
+  dependencies:
+    # Omit other fields ...
+    msgStreamType: rocksmq
+    rocksmq:
+      persistence:
+        enabled: true
+        pvcDeletion: true
 ```
 
-## Configure NATS
-
-NATS is an alternative message storage for NATS.
-
-#### Example
-
-The following example configures a NATS service. 
-
-```YAML
-apiVersion: milvus.io/v1alpha1
-kind: Milvus
-metadata:
-  name: milvus
-spec:
-  dependencies: 
-    msgStreamType: 'natsmq'
-    natsmq:
-      # server side configuration for natsmq.
-      server: 
-        # 4222 by default, Port for nats server listening.
-        port: 4222 
-        # /var/lib/milvus/nats by default, directory to use for JetStream storage of nats.
-        storeDir: /var/lib/milvus/nats 
-        # (B) 16GB by default, Maximum size of the 'file' storage.
-        maxFileStore: 17179869184 
-        # (B) 8MB by default, Maximum number of bytes in a message payload.
-        maxPayload: 8388608 
-        # (B) 64MB by default, Maximum number of bytes buffered for a connection applies to client connections.
-        maxPending: 67108864 
-        # (√ms) 4s by default, waiting for initialization of natsmq finished.
-        initializeTimeout: 4000 
-        monitor:
-          # false by default, If true enable debug log messages.
-          debug: false 
-          # true by default, If set to false, log without timestamps.
-          logTime: true 
-          # no log file by default, Log file path relative to.. .
-          logFile: 
-          # (B) 0, unlimited by default, Size in bytes after the log file rolls over to a new one.
-          logSizeLimit: 0 
-        retention:
-          # (min) 3 days by default, Maximum age of any message in the P-channel.
-          maxAge: 4320 
-          # (B) None by default, How many bytes the single P-channel may contain. Removing oldest messages if the P-channel exceeds this size.
-          maxBytes:
-          # None by default, How many message the single P-channel may contain. Removing oldest messages if the P-channel exceeds this limit.    
-          maxMsgs: 
-  components: {}
-  config: {}
-```
-
-To migrate the message storage from RocksMQ to NATS, do as follows:
-
-1. Stop all DDL operations.
-2. Call the FlushAll API and then stop Milvus once the API call finishes executing.
-3. Change `msgStreamType` to `natsmq` and make necessary changes to NATS settings in `spec.dependencies.natsmq`.
-4. Start Milvus again and check whether:
-
-    - A log entry that reads `mqType=natsmq` is present in the logs.
-    - A directory named `jetstream` is present in the directory specified in `spec.dependencies.natsmq.server.storeDir`.
-
-5. (Optional) Back up and clean up the data files in the RocksMQ storage directory.
-
-<div class="alert note">
-
-**Choose between RocksMQ and NATS?**
-
-RockMQ uses CGO to interact with RocksDB and manages the memory by itself, while the pure-GO NATS embedded in the Milvus installation delegates its memory management to Go's garbage collector (GC).
-
-In the scenario where the data packet is smaller than 64 kb, RocksDB outperforms in terms of memory usage, CPU usage, and response time. On the other hand, if the data packet is greater than 64 kb, NATS excels in terms of response time with sufficient memory and ideal GC scheduling.
-
-Currently, you are advised to use NATS only for experiments.
-
-</div>
+The fields under `rocksmq.persistence` adds an extra PVC to persist the RocksMQ data. `pvcDeletion` determines whether the persisted data will be deleted when the Milvus instance is deleted.
 
 ## Configure Pulsar
 
@@ -155,8 +81,8 @@ Fields used to configure an external Pulsar service include:
 The following example configures an external Pulsar service.
 
 ```YAML
-apiVersion: milvus.io/v1alpha1
-kind: MilvusCluster
+apiVersion: milvus.io/v1beta1
+kind: Milvus
 metadata:
   name: my-release
   labels:
@@ -164,6 +90,7 @@ metadata:
 spec:
   dependencies: # Optional
     pulsar: # Optional
+
       # Whether (=true) to use an existed external pulsar as specified in the field endpoints or 
       # (=false) create a new pulsar inside the same kubernetes cluster for milvus.
       external: true # Optional default=false
@@ -180,57 +107,114 @@ spec:
 
 #### Example 
 
-The following example configures an internal Pulsar service.
+The following example configures an internal Pulsar service in the minimum cost of resources.
 
 ```YAML
-apiVersion: milvus.io/v1alpha1
-kind: MilvusCluster
+apiVersion: milvus.io/v1beta1
+kind: Milvus
 metadata:
   name: my-release
   labels:
     app: milvus
 spec:
+  # Omit other fields ...
   dependencies:
+    # Omit other fields ...
     pulsar:
       inCluster:
         values:
-          components:
+          components: 
             autorecovery: false
-          zookeeper:
-            replicaCount: 1
-          bookkeeper:
-            replicaCount: 1
-            resoureces:
-              limit:
-                cpu: '4'
-              memory: 8Gi
-            requests:
-              cpu: 200m
-              memory: 512Mi
-          broker:
-            replicaCount: 1
-            configData:
-              ## Enable `autoSkipNonRecoverableData` since bookkeeper is running
-              ## without persistence
-              autoSkipNonRecoverableData: "true"
-              managedLedgerDefaultEnsembleSize: "1"
-              managedLedgerDefaultWriteQuorum: "1"
-              managedLedgerDefaultAckQuorum: "1"
+            functions: false
+            toolset: false
+            pulsar_manager: false
+          monitoring:
+            prometheus: false
+            grafana: false
+            node_exporter: false
+            alert_manager: false
           proxy:
             replicaCount: 1
-  components: {}
-  config: {}            
+            resources:
+              requests:
+                cpu: 0.01
+                memory: 256Mi
+            configData:
+              PULSAR_MEM: >
+                -Xms256m -Xmx256m
+              PULSAR_GC: >
+                -XX:MaxDirectMemorySize=256m
+          bookkeeper:
+            replicaCount: 2
+            resources:
+              requests:
+                cpu: 0.01
+                memory: 256Mi
+            configData:
+              PULSAR_MEM: >
+                -Xms256m
+                -Xmx256m
+                -XX:MaxDirectMemorySize=256m
+              PULSAR_GC: >
+                -Dio.netty.leakDetectionLevel=disabled
+                -Dio.netty.recycler.linkCapacity=1024
+                -XX:+UseG1GC -XX:MaxGCPauseMillis=10
+                -XX:+ParallelRefProcEnabled
+                -XX:+UnlockExperimentalVMOptions
+                -XX:+DoEscapeAnalysis
+                -XX:ParallelGCThreads=32
+                -XX:ConcGCThreads=32
+                -XX:G1NewSizePercent=50
+                -XX:+DisableExplicitGC
+                -XX:-ResizePLAB
+                -XX:+ExitOnOutOfMemoryError
+                -XX:+PerfDisableSharedMem
+                -XX:+PrintGCDetails
+          zookeeper:
+            replicaCount: 1
+            resources:
+              requests:
+                cpu: 0.01
+                memory: 256Mi
+            configData:
+              PULSAR_MEM: >
+                -Xms256m
+                -Xmx256m
+              PULSAR_GC: >
+                -Dcom.sun.management.jmxremote
+                -Djute.maxbuffer=10485760
+                -XX:+ParallelRefProcEnabled
+                -XX:+UnlockExperimentalVMOptions
+                -XX:+DoEscapeAnalysis -XX:+DisableExplicitGC
+                -XX:+PerfDisableSharedMem
+                -Dzookeeper.forceSync=no
+          broker:
+            replicaCount: 1
+            resources:
+              requests:
+                cpu: 0.01
+                memory: 256Mi
+            configData:
+              PULSAR_MEM: >
+                -Xms256m
+                -Xmx256m
+              PULSAR_GC: >
+                -XX:MaxDirectMemorySize=256m
+                -Dio.netty.leakDetectionLevel=disabled
+                -Dio.netty.recycler.linkCapacity=1024
+                -XX:+ParallelRefProcEnabled
+                -XX:+UnlockExperimentalVMOptions
+                -XX:+DoEscapeAnalysis
+                -XX:ParallelGCThreads=32
+                -XX:ConcGCThreads=32
+                -XX:G1NewSizePercent=50
+                -XX:+DisableExplicitGC
+                -XX:-ResizePLAB
+                -XX:+ExitOnOutOfMemoryError       
 ```
 
-<div class="alert note">This example specifies the numbers of replicas of each component of Pulsar, the compute resources of Pulsar BookKeeper, and other configurations.</div>
+> Find the complete configuration items to configure an internal Pulsar service in <a href="https://artifacthub.io/packages/helm/apache/pulsar/2.7.8?modal=values"> values.yaml</a>. Add configuration items as needed under `pulsar.inCluster.values` as shown in the preceding example.
 
-<div class="alert note">Find the complete configuration items to configure an internal Pulsar service in <a href="https://artifacthub.io/packages/helm/apache/pulsar/2.7.8?modal=values">values.yaml</a>. Add configuration items as needed under <code>pulsar.inCluster.values</code> as shown in the preceding example.</div>
-
-Assuming that the configuration file is named `milvuscluster.yaml`, run the following command to apply the configuration.
-
-```Shell
-kubectl apply -f milvuscluster.yaml
-```
 
 ## Configure Kafka
 
@@ -252,14 +236,16 @@ Fields used to configure an external Kafka service include:
 The following example configures an external Kafka service.
 
 ```yaml
-apiVersion: milvus.io/v1alpha1
-kind: MilvusCluster
+apiVersion: milvus.io/v1beta1
+kind: Milvus
 metadata:
   name: my-release
   labels:
     app: milvus
 spec: 
+  # Omit other fields ...
   dependencies:
+    # Omit other fields ...
     msgStreamType: "kafka"
     kafka:
       external: true
@@ -267,9 +253,14 @@ spec:
         - "kafkaBrokerAddr1:9092"
         - "kafkaBrokerAddr2:9092"
         # ...
-  components: {}
-  config: {}
+      # securityPolicy supports: PLAINTEXT, SSL, SASL_PLAINTEXT, SASL_SSL 
+      securityPolicy: PLAINTEXT
+      # saslMechanisms supports: PLAIN, SCRAM-SHA-256, SCRAM-SHA-512
+      saslMechanisms: PLAIN
+      saslUsername: ""
+      saslPassword: ""
 ```
+> SASL configurations are supported in operator v0.8.5 or higher version.
 
 ### Internal Kafka
 
@@ -279,9 +270,9 @@ spec:
 
 The following example configures an internal Kafka service.
 
-```
-apiVersion: milvus.io/v1alpha1
-kind: MilvusCluster
+```yaml
+apiVersion: milvus.io/v1beta1
+kind: Milvus
 metadata:
   name: my-release
   labels:
@@ -291,18 +282,11 @@ spec:
     msgStreamType: "kafka"
     kafka:
       inCluster: 
-        values: {} # values can be found in https://artifacthub.io/packages/helm/bitnami/kafka
-  components: {}
-  config: {}
+        values: {} # values can be found in https://github.com/bitnami/charts/blob/1fdd2283f0e5a8772e4a763b455733c77e01b119/bitnami/kafka/values.yaml
 ```
 
-Find the complete configuration items to configure an internal Kafka service [here](https://artifacthub.io/packages/helm/bitnami/kafka). Add configuration items as needed under `kafka.inCluster.values`.
+Find the complete configuration items to configure an internal Kafka service [here](https://github.com/bitnami/charts/blob/1fdd2283f0e5a8772e4a763b455733c77e01b119/bitnami/kafka/values.yaml). Add configuration items as needed under `kafka.inCluster.values`.
 
-Assuming that the configuration file is named `milvuscluster.yaml`, run the following command to apply the configuration.
-
-```
-kubectl apply -f milvuscluster.yaml
-```
 
 ## What's next
 
